docs/.vuepress/styles/index.styl
body {
  font-size: 17px;
}

summary + *
  margin-top: 1rem

.sidebar .sidebar-sub-headers {
  font-size: 1em;
}

.navbar .home-link span.site-name {
  display: none !important;
}

a.active.sidebar-link
  color: $sosRed !important

.page-edit .last-updated .time
  color: #666 !important

.home 
  .hero
    display: none;
    img
      max-height: 430px;
    .description 
      max-width: 40rem !important
      font-size: calc(16px + (32 - 16) * ((100vw - 300px) / (1600 - 300))) !important
      line-height: calc(1.3em + (1.5 - 1.2) * ((100vw - 300px)/(1600 - 300))) !important
      color: #2c3e50 !important
  .feature
    flex-grow: 1 !important;
    flex-basis: 23% !important;
    max-width: 23% !important;

.footer
  font-size: 0.9rem
.footer-links
  text-align: center
  font-size: 0.9rem
  padding: 1rem
  a 
    color: #4e6e8e
  .align-right
    text-align: right
  .align-left
    text-align: left

@media (max-width: 719px) {
  .home .feature {
    max-width: 100% !important;
    padding: 0 1.5rem !important;
  }
}

dt {
  font-weight: bolder;
}

dd {
  margin-bottom: 1em;
}

figcaption {
  text-align: center;
}

.two-column {
  grid-template-columns: 1fr 1fr !important;
}
.three-column {
  grid-template-columns: 1fr 1fr 1fr !important;
}
.four-column {
  grid-template-columns: 1fr 1fr 1fr 1fr !important;
}
.five-column {
  grid-template-columns: 1fr 1fr 1fr 1fr 1fr !important;
}

.custom-block table {
  background-color: white;
  border-collapse: collapse;
}

.details
  hr
    border-color #bbb

.exercise
  margin 1rem 0
  padding .1rem 1.5rem
  border-top-right-radius 0.4rem
  border-bottom-right-radius 0.4rem
  background-color #f0f4f8
  border-left: 8px solid $sosOrange !important;
  .title
    font-weight bold

.example
  margin 1rem 0
  padding .1rem 1.5rem
  border-top-right-radius 0.4rem
  border-bottom-right-radius 0.4rem
  background-color #f0f4f8
  border-left: 8px solid $sosRed !important;
  .title
    font-weight bold

.in-text
  margin 1rem 0
  padding .1rem 1.5rem
  border-top-right-radius 0.4rem
  border-bottom-right-radius 0.4rem
  background-color #f0f4f8
  border-left: 8px solid $sosGreen !important;
  .title
    font-weight bold

.in-footnote
  margin 1rem 0
  padding .1rem 1.5rem
  border-top-right-radius 0.4rem
  border-bottom-right-radius 0.4rem
  background-color #f0f4f8
  border-left: 8px solid $sosOrange !important;
  .title
    font-weight bold
  hr 
    display inline-block
    width: 40%
    left 0
    border-color: #999
  .text-placeholder
    display: block
    background: rgb(224,224,224);
    background: linear-gradient(90deg, rgba(224,224,224,1) 0%, rgba(213,213,213,1) 40%, rgba(227,227,227,1) 100%);
    padding: 0.5em
  .long
    width 90%
  .short
    margin-top: 0.5em
    width 70%
    margin-bottom: 2em

.in-ref
  margin 1rem 0
  padding .1rem 1.5rem
  border-top-right-radius 0.4rem
  border-bottom-right-radius 0.4rem
  background-color #f0f4f8
  border-left: 8px solid $sosBlue !important
  .title
    font-weight bold

.ref
  display: block
  padding: 0 0 0 0.5in
  text-indent: -0.5in
  overflow-wrap: break-word
  word-wrap: break-word
  word-break: break-word

a, p
  overflow-wrap: break-word
  word-wrap: break-word
  word-break: break-word

.custom-block table {
  background-color: white;
  border-collapse: collapse;
}

// SoS grønn = #96A407
// SoS blå = #388AA0
// SoS orange = #ED7900
// SoS rød = #A50007

.custom-block.tip {
  background-color: #f3f5f7;
  border-color: $sosGreen !important;
}

.custom-block.warning {
  background-color: #f3f5f7;
  border-color: $sosBlue !important;
  color: #2c3e50;
}

.custom-block.warning .custom-block-title {
  color: #2c3e50;
}

.tags
  display: flex
  flex-wrap: wrap
  margin: 0 -0.5em
  /* justify-content: space-evenly */
  .tag
    margin: 0.5em
    align-items: center
    background-color: #f5f5f5
    border-radius: 4px
    color: #4a4a4a
    display: inline-flex
    font-size: .75rem
    height: 2em
    justify-content: center
    line-height: 1.5
    padding-left: .75em
    padding-right: .75em
    white-space: nowrap
    .is-large
      font-size: 1.25rem

.cards 
  margin-top: 2rem
  display: grid
  grid-template-columns: 1fr 1fr
  grid-gap: 1rem
  @media screen and (max-width: $MQMobileNarrow)
    grid-template-columns: repeat(auto-fit, minmax(280px, 1fr))
  @media screen and (min-width: $MQNarrow)
    grid-template-columns: 1fr 1fr
  @media screen and (min-width: $MQMobile)
    grid-template-columns: 1fr 1fr
  .card
    display: grid
    grid-gap: 1rem
    grid-template-columns: 1fr 2fr
    @media screen and (max-width: $MQMobile)
      grid-template-columns: 1fr
    .image 
      @media screen and (max-width: $MQMobile)
        display: none
    .content h2
      border-bottom: none
      margin: 0
    .content p
      margin: 0
      font-size: 0.9rem

.references
  grid-template-columns: 1fr
  margin-top: 2em;
  margin-bottom: 1.5em;
  .content h2
    font-size: 2em;
    border-bottom: none
    margin: 0
    text-align: center
  .tags
    justify-content: space-evenly
  .tag
    font-size: 1.1em;

.partners  
  grid-template-columns: 1fr 1fr
  grid-gap: 2.5rem
  display: grid
  align-items: center
  justify-content: center
  margin-bottom: 2rem
  @media screen and (min-width: 809px) and (max-width: $MQNarrow)
    grid-template-columns: 1fr 1fr
  @media screen and (max-width: 809px)
    grid-template-columns: 1fr 1fr 1fr 1fr
    grid-gap: 1rem
  .partner
    display: grid
    align-items: left
    @media screen and (max-width: 809px) 
      align-items: center
      a
        margin: auto
    @media screen and (min-width: 809px)
      align-items: left
    img
      max-height: 60px
    .title
      display: none

.container
  display: grid
  grid-template-columns: repeat(auto-fit, minmax(260px, 1fr))
  grid-gap: 1rem
  .video h1 
    padding-top: 0
    margin-top: 0
    font-size: 1.3em
    display: inline

.search-table
  display: grid
  grid-template-columns: 1fr
  grid-gap: 1rem
  @media screen and (min-width: $MQNarrow)
    grid-template-columns: 2fr 1fr 2fr 1fr 2fr
  @media screen and (max-width: $MQMobile)
    grid-template-columns: 1fr
  .search-table-box
    border: 4px solid $sosBlue
    border-radius: 10px
    text-align: center
    padding: 1rem
    p
      margin: 0
      @media screen and (max-width: $MQNarrow)
        display: inline
  .search-table-combinator
    justify-self: center
    align-self: center
    p
      margin: 0

.pico
  display: flex
  &:last-child
    margin-block-end: 1rem
  .pico-box
    flex-direction: column;
    flex-grow: 1;
    border: 1px solid $sosGreen
    border-radius: 2px
    text-align: center
    padding: 0.2rem
    padding-bottom: 0.3rem
    *
      font-size: calc(7px + (18 - 10) * ((100vw - 300px) / (1600 - 300))) !important
      line-height: calc(1.2em + (1.4 - 1.2) * ((100vw - 300px)/(1600 - 300))) !important
    &:not(:last-child)
      margin-inline-end: 10px
    @media screen and (max-width: $MQNarrow)
      padding: 0.1rem
      padding-bottom: 0.5rem
    p
      margin: 0
    ul
      list-style-type: none
      padding-left: 0
    p.title
      font-weight: bolder
      font-size: 1.6rem !important
      @media screen and (max-width: $MQNarrow)
        display: inline

.persons
  display: grid
  grid-template-columns: 1fr
  .person
    display: grid
    grid-template-columns: 1fr 3fr
    margin: 1rem 0
    padding: 1rem
    border-radius: 2px;
    background-color: #f0f4f8
    grid-gap: 1rem
    .content
      h3
        margin: 0
      p:last-child
        margin-bottom: 0
    .image img
      border-radius: 2px;
      width: 100%
      height: inherit


@media print
  header, footer, .partners
    display: none

h1 img 
  display inline
  position relative
  top 17px
  width 70px
  border-radius: 3px

.flex 
  display: flex
  justify-content: space-between
  align-items: center

table
  min-width: 100%
  thead th
    font-weight: normal !important

